# videoman

./: .gitignore  Readme.md
api/: pyproject.toml
api/api/: app.py  args.py  cache.py  db.py  files.py  preview.py  security.py  tags.py
api/scripts/: api.py  scan.py
web/: README.md  index.html  package-lock.json  package.json  script.js
web.old/: script.js
web/src/: App.vue
web/src/components/: Tags.vue  VideoCard.vue
web/src/components/__tests__/: HelloWorld.spec.ts
web/src/router/: index.ts
web/src/stores/: tags.ts
web/src/views/: VideosView.vue
