[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jacob Stanley"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
tabulate = "^0.9.0"
redis = "^5.1.1"

[tool.poetry.scripts]
scan = "scripts.scan:start"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
